--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,8 @@
             android:text="@string/feeder_1"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:autoSizeMaxTextSize="100sp"
-            app:autoSizeMinTextSize="12sp"
+            app:autoSizeMaxTextSize="40sp"
+            app:autoSizeMinTextSize="20sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform" />
 
@@ -52,8 +52,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/volts"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform" />
 
@@ -63,8 +63,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/_0_0"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform"
                 tools:ignore="NestedWeights" />
@@ -91,8 +91,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/current"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform" />
 
@@ -102,8 +102,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/_0_0"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform"
                 tools:ignore="NestedWeights" />
@@ -130,8 +130,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/temp"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform" />
 
@@ -141,8 +141,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/_0_0"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform" />
         </LinearLayout>
@@ -160,16 +160,18 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
         android:layout_weight="0.1"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="300dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:singleLine="true"
             android:text="@string/power_factor"
-            app:autoSizeMaxTextSize="100sp"
-            app:autoSizeMinTextSize="12sp"
+            app:autoSizeMaxTextSize="30sp"
+            app:autoSizeMinTextSize="16sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform" />
 
@@ -177,10 +179,11 @@
             android:id="@+id/feeder1_power_factor"
             android:layout_width="300dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:singleLine="true"
             android:text="@string/_0_0"
-            app:autoSizeMaxTextSize="100sp"
-            app:autoSizeMinTextSize="12sp"
+            app:autoSizeMaxTextSize="30sp"
+            app:autoSizeMinTextSize="16sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform" />
     </LinearLayout>
@@ -199,8 +202,8 @@
             android:text="@string/feeder_2"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:autoSizeMaxTextSize="100sp"
-            app:autoSizeMinTextSize="12sp"
+            app:autoSizeMaxTextSize="40sp"
+            app:autoSizeMinTextSize="20sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform" />
 
@@ -229,8 +232,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/volts"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform" />
 
@@ -240,8 +243,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/_0_0"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform"
                 tools:ignore="NestedWeights" />
@@ -268,8 +271,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/current"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform" />
 
@@ -279,8 +282,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/_0_0"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform"
                 tools:ignore="NestedWeights" />
@@ -307,8 +310,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/temp"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform" />
 
@@ -318,8 +321,8 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:text="@string/_0_0"
-                app:autoSizeMaxTextSize="100sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMaxTextSize="30sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeStepGranularity="2sp"
                 app:autoSizeTextType="uniform" />
         </LinearLayout>
@@ -337,6 +340,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:layout_weight="0.1"
         android:orientation="horizontal">
 
@@ -346,8 +350,8 @@
             android:layout_weight="1"
             android:singleLine="true"
             android:text="@string/power_factor"
-            app:autoSizeMaxTextSize="100sp"
-            app:autoSizeMinTextSize="12sp"
+            app:autoSizeMaxTextSize="30sp"
+            app:autoSizeMinTextSize="16sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform" />
 
@@ -358,8 +362,8 @@
             android:layout_weight="1"
             android:singleLine="true"
             android:text="@string/_0_0"
-            app:autoSizeMaxTextSize="100sp"
-            app:autoSizeMinTextSize="12sp"
+            app:autoSizeMaxTextSize="30sp"
+            app:autoSizeMinTextSize="16sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform" />
     </LinearLayout>
